RESOLVED FIXED232240
Fix CSS serialization affecting grid-auto-flow
https://bugs.webkit.org/show_bug.cgi?id=232240
Summary Fix CSS serialization affecting grid-auto-flow
zsun
Reported 2021-10-25 06:59:19 PDT
We need to fix the serialization issue of grid-auto-flow where the word 'row' was being included necessarily. The following WPT tests have been affected - css/css-grid/grid-layout-properties.html css/css-grid/parsing/grid-auto-flow-computed.html css/css-grid/parsing/grid-auto-flow-valid.html
Attachments
Patch (7.50 KB, patch)
2021-10-25 07:11 PDT, zsun
no flags
Patch (20.33 KB, patch)
2021-10-25 12:13 PDT, zsun
no flags
zsun
Comment 1 2021-10-25 07:11:00 PDT
zsun
Comment 2 2021-10-25 12:13:22 PDT
EWS Watchlist
Comment 3 2021-10-25 12:14:41 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 4 2021-10-26 10:08:17 PDT
Committed r284876 (243553@main): <https://commits.webkit.org/243553@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442395 [details].
Radar WebKit Bug Importer
Comment 5 2021-10-26 10:09:23 PDT
Note You need to log in before you can comment on or make changes to this bug.