Fix CSS serialization affecting grid-auto-flow https://bugs.webkit.org/show_bug.cgi?id=232240

Reviewed by Sergio Villar Senin.

LayoutTests/imported/w3c:

Update the following test and expectation files -
* LayoutTests/fast/css-grid-layout/grid-auto-flow-get-set-expected.txt:
* LayoutTests/fast/css-grid-layout/grid-auto-flow-get-set.html:
* LayoutTests/fast/css-grid-layout/grid-shorthand-get-set-expected.txt:
* LayoutTests/fast/css-grid-layout/grid-shorthand-get-set.html:
* web-platform-tests/css/css-grid/grid-layout-properties-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-auto-flow-computed-expected.txt:
* web-platform-tests/css/css-grid/parsing/grid-auto-flow-valid-expected.txt:
* web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/grid-auto-flow.html:

Source/WebCore:

This is to fix the serialization issue of grid-auto-flow where the word 'row' has been
included necessarily.

This Change is an import of chromium CL at
https://chromium-review.googlesource.com/c/chromium/src/+/3179598

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle):
* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeGridAutoFlow):


Canonical link: https://commits.webkit.org/243553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284876 268f45cc-cd09-0410-ab3c-d52691b4dbfc